--- a/public/frontend/css/stydetails.css
+++ b/public/frontend/css/stydetails.css
@@ -185,4 +185,87 @@ body{
     font-style: italic;
 }
 
-/* kich thước và cart */
+/* kich thước */
+  
+.details__size{
+    white-space: pre-line;
+    display: inline;
+    display: -webkit-box;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+    justify-content: flex-start;
+}
+
+.label{
+    color: #222;
+    display: inline-block;
+    margin: 0 2px;
+    font-size: 16px;
+    font-weight: 500;
+}
+.value{
+    display: block;
+    margin-top: 10px;
+}
+
+.value__label__size{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.value__label__size__items{
+    display: flex;
+}
+
+.variable-item-contents{
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+}
+
+.variable-item-span{
+    padding: 5px;
+    font-size: 12px;
+    cursor: pointer;
+    position: relative;
+    min-width: 40px;
+    text-align: center;
+    border-radius: 10px;
+    border: 1px solid rgb(192, 192, 192);
+}
+
+/* cart */
+.details__cart{
+    margin: 0;
+    padding: 0;
+    width: 92%;
+    margin-top: 50px;
+    display: flex;
+    border-radius: 20px;
+    border: 1px dashed  rgb(192, 192, 192);
+}
+
+.detail__cart__icons{
+    width: 17%;
+    position: relative;
+    text-align: center;
+}
+
+.detail__cart__icons i{
+    font-size: 50px;
+    color: #194890;
+    position: relative;
+    top: 40px;
+}
