--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1336,6 +1336,7 @@ input[type="text"] {
     grid-template-columns: 0.5fr 0.5fr;
   }
 
+
   /* HERO */
 
   .hero {
@@ -1370,7 +1371,7 @@ input[type="text"] {
 }
 
 @media (max-width: 768px) {
-  .action-btn-search {
+  .search-icon {
     display: none;
   }
 
