--- a/public/frontend/css/stydetails.css
+++ b/public/frontend/css/stydetails.css
@@ -541,7 +541,7 @@ body {
   padding-bottom: 25px;
 }
 
-.tab-description h3 {
+.product__main h3 {
   font-weight: 700;
   font-style: normal;
   color: #000;
